--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -26,7 +26,7 @@ mixin top-nav()
 				+e.col--logo.col-lg.order-lg-first
 					+e.logo(href="/" )
 						+e.animate(data-json="logo.json")
-						img(src="/img/logo-text.svg" alt="logo")
+						img(src="img/logo-text.svg" alt="logo")
 				+e.col--caption.col-lg.order-lg-first
 					+e.caption Дизайн-студия Михаила Ишметова
 				+e.col--lang.col-lg.order-lg-last
