--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
 		color: $secondary;
 	margin-top: auto;
+	padding-bottom: 24px;
 // --sPT: #{rem()};
 	// --sPB: #{rem()};
 	// --sTPB: #{rem()};
