--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -2,6 +2,11 @@
 	// --sPT: #{rem()};
 	// --sPB: #{rem()};
 	// --sTPB: #{rem()};
+	@include media-breakpoint-down(md) {
+	.menu{
+		padding-top: rem(2);
+	}
+}
 	.container{
 		position: relative;
 	}
@@ -39,9 +44,13 @@
 		overflow: hidden;
 		position: absolute;
 		padding-left: 0;
+		z-index: 3;
 		@include media-breakpoint-up(lg) {
-
+			
+			width: rem(80);
+			height: rem(80);
 			@include a-cent1(x);
+			margin-top: rem(-11);
 		}
 		@include media-breakpoint-down(lg) {
 			@include a-cent1(y);
@@ -58,6 +67,10 @@
 		img{
 			max-width: rem(161);
 		}
+		@include media-breakpoint-up(lg) {
+			margin-top: rem(-2);
+			display: inline-block;
+		}
 		@include media-breakpoint-down(lg) {
 			position: relative;
 			padding-left: rem(40);
@@ -73,6 +86,10 @@
 		color: $secondary;
 		line-height: 125%;
 		max-width: rem(160);
+		margin-bottom: rem(14);
+		@include media-breakpoint-up(lg) {
+			margin-top: rem(-2);
+		}
 	}
 	@include media-breakpoint-down(lg) {
 		.row{
