--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -24,6 +24,7 @@ html{
 }
 
 body {
+	// overflow: hidden;
 	&[class*="fixed"],
 	&.fancybox-active{
 		.header{ 
@@ -35,43 +36,26 @@ body {
 	// -webkit-font-smoothing: antialiased;
 	// position: relative;
 	// overflow-x: hidden; 
-	
-	&.loaded_hiding {
+	.loader{
+		@include a-cent;
+		// position: fixed;
+		z-index: 100;
+		background-color: $body-bg;
 		@include mt;
-
-		opacity: 0;
-		pointer-events: none;
-
-		&::before {
-			display: none;
-		}
+		z-index: 9999999;
+	}
+	&.loaded_hiding {   
 	}
 
 	&.loaded {
+		.loader{
+			opacity: 0;
+			visibility: hidden;
+		}
 		pointer-events: visible;
 		opacity: 1;
 	}
-
-	&::before {
-		content: '';
-		position: absolute;
-		left: 0;
-		top: 0;
-		width: 100%;
-		height: 100%;
-		@include mt;
-		// background-color: $body-color;
-		background-color: rgba($body-color, 0.8); 
-    backdrop-filter: blur(5px);
-		opacity: 0;
-		z-index: -1;
-		// left: 200px;
-		left: 0;
-		// opacity: 1;
-		// z-index: 1;
-		top: 0;
-	}
-
+ 
 	&.fancybox-active {
 		overflow: hidden;
 
@@ -93,6 +77,7 @@ body {
 			opacity: 0.76;
 		}
 	}
+	overflow: hidden;
 }
 
 .main-wrapper { 
@@ -102,13 +87,14 @@ body {
 	display: flex;
 	flex-direction: column;
 	// flex-direction: row; 
-// /	overflow: scroll;
+	overflow-y: auto;
 	// width: 100%; 
 	// height: 100vh;
-	min-height: calc(var(--vh, 1vh) * 100);
+	height: calc(var(--vh, 1vh) * 100);
 	
 	
 }
+.scroll-content,
 main{
 	flex-grow: 1;
 }
@@ -569,8 +555,7 @@ iframe {
 	z-index: 2;
 	&:hover{
 		
-		--top: 0;
-		--sc: 1.04;
+		--top: 0; 
 	}
 }
 .btn__bg{
@@ -579,8 +564,7 @@ iframe {
 	border: 1px solid rgba(246, 244, 234, .2);
 	border-radius: rem(18);
 	overflow: hidden;
-	@include mt;
-	transform: scale(var(--sc, 1));
+	@include mt; 
 	&::before{
 		content: '';
 		@include a-cent;
@@ -592,9 +576,9 @@ iframe {
 .btn-outline-primary{
 	border: none !important;
 	background: none !important;
-	position: relative;
+	position: relative; 
 	&:hover{
-		--sc: 1.14;
+		color: #fff;
 	}
 	.btn__bg{
 		border-radius: 100px;
@@ -608,3 +592,57 @@ iframe {
 .headerBlock .swiper-wrapper{
     transition-timing-function: linear;
 }
+
+.container{
+	padding-left: 18px;
+	padding-right: 18px;
+}
+
+
+
+.goo {
+        position: absolute;
+        top: 0;
+    }
+		.ink-cursor {
+				pointer-events: none;
+				position: fixed;
+				display: block;
+				border-radius: 0;
+				-webkit-transform-origin: center center;
+				transform-origin: center center;
+				mix-blend-mode: difference;
+				top: 0;
+				left: 0;
+				z-index: 9999999;
+				-webkit-filter: url("#goo");
+				filter: url("#goo");
+		}
+
+		.ink-cursor span {
+				position: absolute;
+				display: block;
+				width: 26px;
+				height: 26px;
+				border-radius: 20px;
+				background-color: #fff;
+				-webkit-transform-origin: center center;
+				transform-origin: center center;
+				-webkit-transform: translate(-50%, -50%);
+				transform: translate(-50%, -50%);
+		}
+
+		@media (max-width: 991px) {
+
+				.ink-cursor,
+				.ink-cursor span {
+						display: none
+				}
+		}
+
+
+		body{
+			.scrollbar-track{
+
+			}
+		}
