--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -17,6 +17,7 @@
 		color: $body-color;
 		.btn__bg{
 			border-radius: 50%;
+			border-color: $body-color;
 		}
 		&:hover{ 
 		 	// box-shadow: 0 0 33px 0px rgba(255, 83, 0, 0.16);
