--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -21,7 +21,7 @@ mixin top-nav()
 	// start top-nav
 	
 	+b.top-nav.block-with-lazy
-		.container
+		.container-fluid
 			.row
 				.col-lg-auto.d-none.d-lg-block
 				+e.col--logo.col-lg.order-lg-first
