--- a/sourse/pug/layout/main.pug
+++ b/sourse/pug/layout/main.pug
@@ -45,7 +45,7 @@ html(lang="ru")
 	block variables 
 	//- body(class=mainPage data-bg=bg)
 	body.loaded_hiding(class= mainPage )
-		//- .loader
+		.loader
 		#ink-cursor.ink-cursor
 		.main-wrapper().custom-scroll-js
 			block pagecontent
