--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -1,7 +1,7 @@
 mixin headerBlock()
 	// start headerBlock
 	+b.headerBlock#headerBlock&attributes(attributes)
-		.container
+		.container-fluid
 			+e.img-wrap(data-image="img/panda-cover.jpg" data-displacement="img/4.png")
 				//- img(src="img/@2x/panda-cover.jpg", alt="").res-i
 				//- img(src="img/@2x/panda-cover.jpg", alt="")
