--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -25,10 +25,11 @@ mixin top-nav()
 			.row
 				.col-lg-auto.d-none.d-lg-block
 				+e.col--logo.col-lg.order-lg-first
-					+e.logo(href="/" )
+					+e.logo()
 						+e.LOTTIE-PLAYER.animate(src="logo.json" id="logo").lottie-js
 						//- +e.animate(data-json="logo.json")
-						img(src="img/logo-text.svg" alt="logo")
+						a(href="/") 
+							img(src="img/logo-text.svg" alt="logo")
 				+e.col--caption.col-lg.order-lg-first
 					+e.caption Дизайн-студия Михаила Ишметова
 				+e.col--lang.col-lg.order-lg-last
