--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -78,6 +78,7 @@ body {
 			opacity: 0.76;
 		}
 	}
+	// overflow: hidden;
 }
 
 .main-wrapper { 
@@ -94,6 +95,8 @@ body {
 	
 	
 }
+
+
 .scroll-content,
 main{
 	flex-grow: 1;
