--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -41,6 +41,7 @@
 		margin-left: auto;
 		margin-right: auto;
 		@include block(446, 936);
+		cursor: pointer;
 		// canvas,
 		// img{
 		// 	width: 100% !important;
